# research-paper-summaries

./: .env.example  .gitignore  CLAUDE.md  FUTURE_FIXES.md  PROJECT_PLAN.md  README.md  alembic.ini  app_planning.md  audio_processing.py  file_processing.py  main.py  progress_journal.md  pyproject.toml  research_details.py  text_processing.py  user_management.py
.claude/agents/: academic-writing-advisor.md  backend-engineer.md  deeptech-brand-architect.md  frontend-engineer.md  ml-engineer.md  modern-stack-advisor.md  systems-architect.md  ux-design-advisor.md
.claude/skills/ask-for-help/: SKILL.md
.claude/skills/future-fixes-to-issues/: SKILL.md  agent-brief-template.md  create_issues.py  rubric.md
.claude/skills/git-detective/: SKILL.md
.claude/skills/issue-solver/: SKILL.md
.claude/skills/pr-reviewer/: SKILL.md
.claude/skills/workflow-optimizer/: SKILL.md
.claude/skills/workflow-optimizer/references/: building-guide.md
.claude/website_design_examples/: design_notes.md
.githooks/: pre-commit
.github/workflows/: ci.yml
config/: downlow.toml
data/: document_data.json  research_data.json
docs/: podcast_design.md  ui_design.md  ui_plan.md
documents/harriet/: pdf_texts.json
legacy/: README.md  file_processing.py  main.py  research_details.py
legacy/data/: document_data.json
migrations/: env.py  script.py.mako
migrations/versions/: 20260625_0318-a55b3168b406_baseline_schema.py
src/downlow/: __init__.py
src/downlow/adapters/: __init__.py
src/downlow/adapters/audio/: __init__.py  mixer.py
src/downlow/adapters/db/: __init__.py  engine.py  repositories.py  tables.py
src/downlow/adapters/llm/: __init__.py  anthropic_client.py
src/downlow/adapters/pdf/: __init__.py  extractor.py
src/downlow/adapters/render/: __init__.py  typst_renderer.py
src/downlow/adapters/storage/: __init__.py  filesystem_store.py
src/downlow/adapters/tts/: __init__.py  elevenlabs_client.py
src/downlow/api/: README.md  __init__.py
src/downlow/cli/: __init__.py  app.py  deps.py  legacy_loader.py
src/downlow/cli/commands/: __init__.py  backfill.py  library.py  narrate.py  process.py  rename.py  report.py  summarise.py
src/downlow/config/: __init__.py  models.py  profiles.py  settings.py
src/downlow/core/: __init__.py  naming.py  pipeline.py
src/downlow/core/eval/: __init__.py
src/downlow/core/prompts/: __init__.py  metadata.py  narration.py  report.py  summary.py
src/downlow/core/services/: __init__.py  backfill.py  filename.py  library.py  processing.py  voices.py
src/downlow/core/stages/: __init__.py  base.py  ingest.py  narrate.py  render.py  store.py  summarise.py  textsplit.py
src/downlow/domain/: __init__.py  entities.py  enums.py  errors.py  ports.py  schemas.py
src/downlow/frontend/: README.md
tests/: conftest.py
tests/fakes/: __init__.py  audio.py  llm.py  pdf.py  render.py  repository.py  tts.py
tests/fixtures/: paper_summary.json  report_data.golden.json
tests/integration/: test_ingest_real.py  test_narrate_real.py  test_processing_real.py  test_typst_render_real.py
tests/unit/: test_backfill.py  test_backfill_cli.py  test_filename.py  test_filesystem_store.py  test_ingest.py  test_legacy_loader.py  test_library_service.py  test_migrations.py  test_mixer.py  test_naming.py  test_narrate.py  test_process_cli.py  test_processing.py  test_rename_cli.py  test_render.py  test_render_golden.py  test_report_cli.py  test_report_config.py  test_repository.py  test_smoke.py  test_store.py  test_summarise.py  test_tts.py  test_typst_renderer.py  test_voices_service.py
typst/: report.typ
