[project]
name = "downlow"
version = "0.1.0"
description = "DownLow — the low-down on a research paper: context-steered summaries, Typst reports, and a two-presenter interview podcast."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    # LLM -- floor pinned to the version shipping messages.parse / output_config
    # (structured outputs), output_config.effort, adaptive thinking, and
    # beta.messages (future Files-API native PDF). Older 0.x predates these.
    "anthropic>=0.111",
    # Persistence
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    # Validation & config
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    # PDF
    "pdfplumber>=0.11",
    # Audio (TTS + mixing); pydub needs system ffmpeg
    "elevenlabs>=1.0",
    "pydub>=0.25",
    # CLI + HTTP
    "typer>=0.12",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Future FastAPI layer (Phase 3) — `core` must never import from it.
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]
# Postgres driver (Phase 2.2 — Postgres-readiness). SQLite-only users do NOT need
# this; install with `uv sync --extra postgres` and point DATABASE_URL at a
# `postgresql+psycopg://...` URL. psycopg3 (the `psycopg` package, NOT psycopg2);
# `[binary]` ships the prebuilt libpq wheel so no system libpq/compiler is needed.
postgres = [
    "psycopg[binary]>=3.2",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.12",
    "pre-commit>=4.0",
]

[project.scripts]
dl = "downlow.cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/downlow"]

# =============================================================================
# Ruff
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]
exclude = ["legacy"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "T20", "RUF"]
ignore = [
    "E501",   # line length (handled by the formatter)
    "N815",   # mixedCase class attrs (Pydantic API models)
    "RUF012", # mutable class attrs
]

[tool.ruff.lint.per-file-ignores]
"src/downlow/cli/*" = ["T201"]  # the CLI legitimately prints
".claude/**/*.py" = ["T201"]    # skill utility scripts legitimately print

[tool.ruff.lint.isort]
known-first-party = ["downlow"]

# =============================================================================
# Mypy
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = ["legacy/"]

[[tool.mypy.overrides]]
# These libraries ship no type stubs; scope the tolerance (don't blanket-ignore).
module = ["pdfplumber.*", "pydub.*", "elevenlabs.*", "typst.*"]
ignore_missing_imports = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = ["--strict-markers", "--tb=short", "-q"]
markers = [
    "slow: slow tests (deselect with -m 'not slow')",
    "integration: tests needing external services or binaries (typst / ffmpeg)",
]

# =============================================================================
# Coverage
# =============================================================================
[tool.coverage.run]
source = ["downlow"]
omit = [
    "*/__init__.py",
    "src/downlow/api/*",
    "src/downlow/frontend/*",
]

[tool.coverage.report]
# Ratchet complete: 60 -> 70 -> 75 -> 78 -> 80 across F2-F5. The suite sits at ~84%.
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
